--- a/index.html
+++ b/index.html
@@ -1,3 +1,3 @@
 <h1> ciudad mitad del mundo  </h1>
 <img src="https://upload.wikimedia.org/wikipedia/commons/thumb/5/59/Ciudad_Mitad_del_Mundo.jpg/270px-Ciudad_Mitad_del_Mundo.jpg"
-     alt="Logotipo de HTML5" width="400" height="453" />
+     alt="monumento a la expedicion francesa " width="400" height="453" />
