--- a/index.html
+++ b/index.html
@@ -1,9 +1,9 @@
-<h1  "color:blue;"> ciudad mitad del mundo  </h1>
+<h1  "color:red;"> ciudad mitad del mundo  </h1>
 <img src="https://upload.wikimedia.org/wikipedia/commons/thumb/5/59/Ciudad_Mitad_del_Mundo.jpg/270px-Ciudad_Mitad_del_Mundo.jpg"
      alt="monumento a la expedicion francesa " width="400" height="453" />
 <body>
 
-    <h1>Calculadora de Distancia a la Mitad del Mundo</h1>
+    <h1 "color:yellow;">Calculadora de Distancia a la Mitad del Mundo</h1>
 
     <p>Su ubicación actual: <span id="location"></span></p>
 
